--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,5 +9,8 @@
         <div class="col">
             <button class="btn btn-primary" (click)="navigateTo('/form')">FORM VCA</button>
         </div>
+        <div class="col">
+            <button class="btn btn-primary" (click)="navigateTo('/dynamic-form')">DYNAMIC FORM</button>
+        </div>
     </div>
 </div>
